# gridiron_gpt

./: $env_log_path  $log_path  .env  .gitignore  .pre-commit-config.yaml  README.md  SETGarzaAlfredo.py  __init__.py  __main__.py  advisor.py  alembic.ini  alerts.py  ascii_table.md  calculator.py  chain.py  conftest.py  core.py  dashboard.py  db.py  decision_tree_model.pkl  dev-requirements.txt  dev.py  dev_activate.sh  dev_import_diagnostics.py  dev_runner.py  dev_setup.md  diagnostics_cli.py  dry_run_embed.py  embed.py  embed_client.py  env_usage_log.txt  fantasy_data.csv  ff_dashboard.py  health_check.xsh  index.js  index_full.index  index_rebuilt.index  ingest.py  jobs.py  le_position.pkl  (+30 more)
alembic/: env.py
app/: __init__.py  advisor_legacy.py  config.py  retrieval.py
backend/: server.js
cli/: __init__.py  __main__.py  audit.py  doctor.py  espn.py  espn_ingest_cli.py  main.py  receiving.py  rushing.py  validate_imports.py
cli_modules/: __init__.py  embed_cli.py  handlers.py  main.py  nlp_loader.py  nlp_setup.py  phred_status.py  query_models.py  registry.py  semantic_parser.py  sports.py
clients/: ollamaClient.js  weaviateClient.js  weviateClient.js
config/: api_keys.yaml  endpoints.py  ingest.py
core/: advisor.py  index_rebuilt.index  query_engine.py  slack_bot.py
dashboard/: dashboard_cli.py  matchup_diff.py  matchup_summary.py
data/: nfl_events_20250810_200231.json  nfl_stats.csv  player_data.json  schema.py
data_ingest/: espn_ingest.py  nflverse_ingest.py
embeddings/: embed_router.py  mistral_embed.py  openai_embed.py
exports/: tank_dell_profile.json
feedback/: __init__.py  context.py  core.py
fetchers/: __init__.py  __main__.py  main.py
frontend/: index.html  index.js  server.js  style.css
gridiron_gpt/: $env_log_path  $log_path  .env.example  .gitignore  README.md  __main__.py  alerts.py  dashboard_cli.py  data_pipeline.py  gridiron_startup.xsh  import_weekly_data.py  phredenv_loader.xsh  pipeline_check.xsh  prepend_emoji_banner.sh  pytest.ini  requirements.txt  run.sh  utils.py  xsh_env_usage.txt
ingest/: Makefile  config.toml  ingest.py  requirements.txt
ingestion/: ingest.py  (+1 more)
(+488 files in other folders)
